refactor function 1 file
